[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-expense-tracker"
version = "0.1.0"
description = "Local-first family income and expense tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.35",
  "pandas>=2.2",
  "sqlalchemy>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
